# dlsite-async

./: .cookiecutter.json  .darglint  .flake8  .gitignore  .pre-commit-config.yaml  .safety-policy.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  noxfile.py  pyproject.toml
.github/: renovate.json
.github/workflows/: constraints.txt  labeler.yml  release.yml  tests.yml
docs/: conf.py  index.md  reference.md  requirements.txt  usage.md
src/dlsite_async/: __init__.py  __main__.py  _scraper.py  api.py  circle.py  exceptions.py  utils.py  work.py
src/dlsite_async/play/: __init__.py  api.py  ebook.py  epub.py  models.py  scramble.py
tests/: __init__.py  conftest.py  test_api.py  test_circle.py  test_main.py  test_utils.py
tests/play/: __init__.py  test_api.py  test_scramble.py
