[tool.poetry]
name = "dlsite-async"
version = "0.2.0"
description = "DLsite Async"
authors = ["byeonhyeok <bhrevol@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/bhrevol/dlsite-async"
repository = "https://github.com/bhrevol/dlsite-async"
documentation = "https://dlsite-async.readthedocs.io"
classifiers = [
    "Development Status :: 4 - Beta",
]

[tool.poetry.urls]
Changelog = "https://github.com/bhrevol/dlsite-async/releases"

[tool.poetry.dependencies]
python = "^3.9"
lxml = "^4.9.1"
aiohttp = "^3.8.1"
Pillow = {version = "^9.2.0", optional = true}
beautifulsoup4 = "^4.11.1"

[tool.poetry.dev-dependencies]
Pygments = ">=2.10.0"
coverage = {extras = ["toml"], version = ">=6.2"}
furo = ">=2021.11.12"
sphinx = ">=4.3.2"
sphinx-autobuild = ">=2021.3.14"
typeguard = ">=2.13.3"
xdoctest = {extras = ["colors"], version = ">=0.15.10"}
myst-parser = {version = ">=0.16.1"}

[tool.poetry.extras]
pil = ["Pillow"]

[tool.poetry.group.dev.dependencies]
types-Pillow = "^9.2.2"
safety = "^2.3.5"
black = "^23.7.0"
flake8 = "^6.0.0"
flake8-bandit = "^4.1.1"
flake8-bugbear = "^23.7.10"
flake8-docstrings = "^1.7.0"
flake8-rst-docstrings = "^0.3.0"
pre-commit = "^3.3.3"
pre-commit-hooks = "^4.4.0"
pep8-naming = "^0.13.3"
isort = "^5.12.0"
pyupgrade = "^3.9.0"
darglint = "^1.8.1"
mypy = "^1.4.1"
lxml-stubs = "^0.4.0"
pytest = "^7.4.0"
pytest-asyncio = "^0.19.0"
pytest-mock = "^3.8.2"
aioresponses = "^0.7.3"

[tool.bandit]
skips = ["B320"]

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["dlsite_async", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.isort]
profile = "black"
multi_line_output = 3
lines_after_imports = 2

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
