[tool.bandit]
skips = ["B320"]

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["dlsite_async", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.isort]
profile = "black"
multi_line_output = 3
lines_after_imports = 2

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[tool.pytest.ini_options]
asyncio_mode = "auto"


[tool.pdm]
[tool.pdm.dev-dependencies]
coverage = [
    "coverage[toml]>=7.4.0"
]
dev = [
    "nox>=2023.4.22",
]
docs = [
    "furo>=2023.9.10",
    "myst-parser>=2.0.0",
    "sphinx>=7.2.6",
    "sphinx-click>=5.1.0",
]
lint = [
    "pre-commit>=3.6.0"
]
mypy = [
    "mypy>=1.8.0"
]
tests = [
    "aioresponses<1.0.0,>=0.7.3",
    "lxml-stubs<1.0.0,>=0.4.0",
    "pygments>=2.17.2",
    "pytest>=7.4.3",
    "pytest-asyncio<1.0.0,>=0.21.0",
    "pytest-mock<4.0.0,>=3.8.2",
    "types-Pillow<11.0.0,>=10.0.0",
]
safety = [
    "safety>=2.3.5"
]
typeguard = [
    "typeguard>=4.1.5",
]
xdoctest = [
    "xdoctest[colors]>=1.1.2",
]

[tool.pdm.build]
includes = []

[tool.pdm.version]
source = "scm"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[project]
authors = [
    {name = "byeonhyeok", email = "bhrevol@gmail.com"},
]
license = {text = "MIT"}
requires-python = ">=3.9,<4.0"
dependencies = [
    "lxml<5.2.3,>=5.2.2",
    "aiohttp<4.0.0,>=3.8.1",
    "beautifulsoup4<5.0.0,>=4.11.1",
]
name = "dlsite-async"
description = "DLsite Async"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
]
dynamic = ["version"]

[project.urls]
Changelog = "https://github.com/bhrevol/dlsite-async/releases"
homepage = "https://github.com/bhrevol/dlsite-async"
repository = "https://github.com/bhrevol/dlsite-async"
documentation = "https://dlsite-async.readthedocs.io"

[project.optional-dependencies]
pil = [
    "Pillow<11.0.0,>=10.0.0",
]
